<resources>
    <string name="app_name">Organize Your Day</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_about">About</string>
    <string name="textAbout">SIMPLE</string>
    <string name="cancel_button">Cancel</string>
    <string name="apply_button">Apply</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sorting_inem">Sorting</string>
    <string name="settings_item">Settings</string>
    <string name="share_item">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="list">
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>2</item>
    </string-array>

    <string name="about_name">Organize Your Day</string>
    <string name="about_text">\n<b>Распространяется по лицензии GPL</b>\nВерсия 0.1.2\n\n© Plexiform, 2016\n\n</string>

    <string name="pref_decor">Оформление</string>
    <string name="pref_data">Данные</string>
    <string name="pref_format_data_title">Удалить данные</string>
    <string name="pref_format_data_summary">Удаляет все пользовательские данные</string>
    <string name="pref_themes_title">Тема</string>

    <string-array name="themes_list">
        <item>Green Theme</item>
        <item>Black Theme</item>
        <item>Pink Theme</item>
    </string-array>
    <string-array name="themes_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

</resources>
