<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_data"
        android:key="pref_data"
        >
        <Preference

            android:key="format_data"
            android:title="@string/pref_format_data_title"
            android:summary="@string/pref_format_data_summary"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:defaultValue="true"
            android:icon="@drawable/ic_info"
            />
    </PreferenceCategory>
<PreferenceCategory android:title="@string/pref_decor" android:key="pref_themes">


    <ListPreference
        android:key="pref_themes_list"
        android:defaultValue="0"
        android:title="@string/pref_themes_title"
        android:entries="@array/themes_list"
        android:entryValues="@array/themes_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:icon="@drawable/iconka_0"
        />

</PreferenceCategory>
</PreferenceScreen>