<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/home"
            android:icon="@drawable/ic_menu_home"
            android:title="Home" />

        <item

            android:id="@+id/sorting"
            android:icon="@drawable/ic_menu_sorting"
            android:title="@string/sorting_inem" />
    </group>

    <item android:title="@string/nav_bar_settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_item" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings_item" />

            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info"
                android:title="About"/>
        </menu>
    </item>

</menu>
